Rename v4 to v0 and fix urls
Signed-off-by: Julien 'Lta' BALLET <contact@lta.io>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
 
   <div class="welcome-top">
-    <p class="title">Backup</p>
+    <p class="title">BackupII</p>
     <p class="summary">
       Provides an elegant DSL in Ruby for performing backups on UNIX-like systems.
     </p>
@@ -23,16 +23,16 @@
 
   <div class="welcome-bottom">
     <p>
-      Backup is a system utility for Linux and Mac OS X, distributed as a
+      BackupII is a system utility for Linux and Mac OS X, distributed as a
       RubyGem, that allows you to easily perform backup operations.
-      Backup has built-in support for various databases, storage
+      BackupII has built-in support for various databases, storage
       protocols/services, syncers, compressors, encryptors and notifiers which
       you can mix and match. It was built with modularity, extensibility and
       simplicity in mind.
     </p>
     <p class="buttons">
-      <a href="{{ site.baseurl }}/v4">Documentation</a>
-      <a href="https://github.com/meskyanichi/backup">View on Github</a>
+      <a href="{{ site.baseurl }}/v0">Documentation</a>
+      <a href="https://github.com/backupii/backupii">View on Github</a>
     </p>
   </div>
 
